XJC requires runtime module to be explicitly set
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>